[gd_scene load_steps=18 format=3 uid="uid://dk4reaxs2tlf8"]

[ext_resource type="Script" path="res://Components/unit_component.gd" id="1_3oe4h"]
[ext_resource type="Script" path="res://Components/stats_component.gd" id="2_soei4"]
[ext_resource type="Texture2D" uid="uid://c7x32sfjvrwu3" path="res://Assets/Tank Wheel Set.png" id="3_rirxj"]
[ext_resource type="Script" path="res://Scenes/Enemies/Tanks/wheels.gd" id="4_j7wem"]
[ext_resource type="Texture2D" uid="uid://c2ta8tpy7xnpo" path="res://Assets/tank-1.png" id="5_okul2"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="6_h6v68"]
[ext_resource type="PackedScene" uid="uid://brvtcpf7vraqx" path="res://Components/health_bar_component.tscn" id="7_5pxq4"]
[ext_resource type="Script" path="res://Components/hit_box_component.gd" id="8_nmofl"]
[ext_resource type="Script" path="res://Components/navigation_component.gd" id="9_bt3de"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ow4"]
atlas = ExtResource("3_rirxj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk1my"]
atlas = ExtResource("3_rirxj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62oan"]
atlas = ExtResource("3_rirxj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_234pl"]
atlas = ExtResource("3_rirxj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiae0"]
atlas = ExtResource("3_rirxj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0i6xs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ow4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk1my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62oan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiae0")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_od2ca"]
size = Vector2(26, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7smc"]
size = Vector2(26, 26)

[node name="Tank" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_3oe4h")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_soei4")
speed = 250.0

[node name="Wheels" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0i6xs")
autoplay = "default"
frame_progress = 0.538693
script = ExtResource("4_j7wem")

[node name="Hull" type="Sprite2D" parent="."]
modulate = Color(0, 0.529412, 1, 1)
texture = ExtResource("5_okul2")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_h6v68")

[node name="HealthBarComponent" parent="." instance=ExtResource("7_5pxq4")]
offset_left = -37.0
offset_top = -26.0
offset_right = 37.0
offset_bottom = -14.0

[node name="HitBoxComponent" type="Area2D" parent="."]
visible = false
script = ExtResource("8_nmofl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("RectangleShape2D_od2ca")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_d7smc")

[node name="NavigationComponent" type="NavigationAgent2D" parent="."]
script = ExtResource("9_bt3de")

[connection signal="target_reached" from="NavigationComponent" to="NavigationComponent" method="_on_target_reached"]
