[gd_scene load_steps=18 format=3 uid="uid://dk4reaxs2tlf8"]

[ext_resource type="Script" path="res://Scenes/Entities/Tank.gd" id="1_jq1l5"]
[ext_resource type="Texture2D" uid="uid://c7x32sfjvrwu3" path="res://Assets/Tank Wheel Set.png" id="2_h7r1l"]
[ext_resource type="Script" path="res://Scenes/Entities/wheels.gd" id="3_163hg"]
[ext_resource type="Texture2D" uid="uid://c2ta8tpy7xnpo" path="res://Assets/tank-1.png" id="4_bt20y"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="5_aa8w6"]
[ext_resource type="PackedScene" uid="uid://brvtcpf7vraqx" path="res://Components/health_bar_component.tscn" id="6_kf0w0"]
[ext_resource type="Script" path="res://Components/hit_box_component.gd" id="7_jk3b8"]
[ext_resource type="Script" path="res://Components/navigation_component.gd" id="8_tw4fn"]
[ext_resource type="Script" path="res://Components/velocity_component.gd" id="9_vhia4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ow4"]
atlas = ExtResource("2_h7r1l")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk1my"]
atlas = ExtResource("2_h7r1l")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62oan"]
atlas = ExtResource("2_h7r1l")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_234pl"]
atlas = ExtResource("2_h7r1l")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiae0"]
atlas = ExtResource("2_h7r1l")
region = Rect2(128, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0i6xs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ow4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk1my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62oan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiae0")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_od2ca"]
size = Vector2(26, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7smc"]
size = Vector2(26, 26)

[node name="Tank" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_jq1l5")

[node name="Wheels" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0i6xs")
autoplay = "default"
frame_progress = 0.538693
script = ExtResource("3_163hg")

[node name="Hull" type="Sprite2D" parent="."]
modulate = Color(0, 0.529412, 1, 1)
texture = ExtResource("4_bt20y")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_aa8w6")

[node name="HealthBarComponent" parent="." instance=ExtResource("6_kf0w0")]
offset_left = -37.0
offset_top = -26.0
offset_right = 37.0
offset_bottom = -14.0
tint_progress = Color(8.23036e-06, 0.772518, 0.297999, 1)

[node name="HurtBoxComponent" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 32
script = ExtResource("7_jk3b8")
debug_with_mouse = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("RectangleShape2D_od2ca")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_d7smc")

[node name="NavigationComponent" type="NavigationAgent2D" parent="."]
script = ExtResource("8_tw4fn")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("9_vhia4")
